# Game2048

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
src/: main.cpp
